# NodeMonitorLite

./: .gitignore  Cargo.toml  README.md  config-example.toml
client/: Cargo.toml
client/src/: config.rs  main.rs  net.rs  sampling.rs  task.rs
common/: Cargo.toml  build.rs
common/proto/: machine.proto
common/src/: lib.rs
server/: Cargo.toml
server/src/: cli.rs  deamon.rs  main.rs
server/svc-cli/: Cargo.toml
server/svc-cli/src/: main.rs
server/svc-deamon/: Cargo.toml
server/svc-deamon/src/: main.rs
